--- a/main.tex
+++ b/main.tex
@@ -68,6 +68,11 @@
 \newcommand{\Zl}{\ensuremath{\hat{\mbm{\mathrm{Z}}}_l}}
 \newcommand{\labframe}{\ensuremath{\left\{\Xl\Yl\Zl\right\}}}
 
+\newcommand{\Xb}{\ensuremath{\hat{\mbm{\mathrm{X}}}_b}}
+\newcommand{\Yb}{\ensuremath{\hat{\mbm{\mathrm{Y}}}_b}}
+\newcommand{\Zb}{\ensuremath{\hat{\mbm{\mathrm{Z}}}_b}}
+\newcommand{\beamframe}{\ensuremath{\left\{\Xb\Yb\Zb\right\}}}
+
 \newcommand{\Xd}{\ensuremath{\hat{\mbm{\mathrm{X}}}_d}}
 \newcommand{\Yd}{\ensuremath{\hat{\mbm{\mathrm{Y}}}_d}}
 \newcommand{\Zd}{\ensuremath{\hat{\mbm{\mathrm{Z}}}_d}}
@@ -85,6 +90,7 @@
 
 % vector components
 \newcommand{\labcomps}[1]{\left[#1\right]_l}
+\newcommand{\beamcomps}[1]{\left[#1\right]_b}
 \newcommand{\detcomps}[1]{\left[#1\right]_d}
 \newcommand{\samcomps}[1]{\left[#1\right]_s}
 \newcommand{\xtlcomps}[1]{\left[#1\right]_c}
@@ -227,15 +233,16 @@ incident beam, with provision for finite deviations.
 \section{Coordinate Systems}
 
 A single-detector diffraction measurement schema is illustrated in
-\figref{F:diffraction_schema}.  For genearlity we utilize four
+\figref{F:diffraction_schema}.  For genearlity we utilize five
 fundamental coordinate systems:
 \begin{itemize}
   \item the {\bf laboratory} frame, \labframe;
+  \item the {\bf beam} frame, \beamframe;
   \item the {\bf detector} frame(s), $\detframe_i$;
   \item the {\bf sample} frame, \samframe; and
   \item the {\bf crystal} frame, \xtlframe.
 \end{itemize}
-
+\newpage
 \subsection{Laboratory Frame}\label{S:laboratory}
 The laboratory frame is intended to provide a global reference frame
 that is stationary during the measurement.  The incident beam has a
@@ -244,32 +251,33 @@ rectangular or circular cross-section.  The beam direction is
 represented by the unit vector \bhat, and the centroid of its
 cross-section is defined to coincide with the origin of \labframe,
 labeled \Pzero.
-\subsubsection{The Beam Frame}
+
+\subsection{Beam Frame}
 When working with diffraction geometry, it becomes very useful to associate detector-relative cartesian coordinates with a bragg angle, $2\theta$, and azimuth, $\eta$.  In the present notation, the bragg angle (see \eqnref{E:braggCondition}) is defined as
 \begin{equation}
   2\theta \equiv \arccos{\left( \bhat \cdot \dhat \right)}
 \end{equation}
 where \dhat\ is the unit vector along the diffracted beam 
-\begin{displaymath}
+\begin{equation}
   \dhat \equiv \frac{\Pfour-\Pthree}{\|\Pfour-\Pthree\|}
-\end{displaymath}
-(see \secref{S:detector}, \ref{S:crystal})
+\end{equation}
+and \bhat\ is the propagation direction of the incident beam, or the unit incident wavevector (see \secref{S:detector}, \ref{S:crystal}).  Given the axisymmetry inherent in the definition of the diffraction condition, it also becomes useful to describe \dhat\ in terms of an azimuthal angle, $\eta$; this requires defining a reference azimuth, which is done using a vector \ehat\ perpendicular to \bhat.  In terms of \ehat, \bhat, and \dhat\
 \begin{equation}
-  \eta = \arccos{\left(\ehat \cdot \left( \eye - \bhat \otimes \bhat \right)\cdot\dhat\right)}
+  \eta = \arccos{\left(\ehat \cdot \left( \eye - \bhat \otimes \bhat \right)\cdot\dhat\right)}.
 \end{equation}
 
-The definition of a reference azimuth is arbitrary
+One benefit of the beam frame is that the components of a unit reciprocal lattice vector, \ghat, satisfying the bragg condition can be written exclusively in terms of $2\theta$ and $\eta$
 \begin{equation}
-  \left[ \ehat,\; -\bhat\times\ehat,\; -\bhat \right]
-  \label{E:etaFrame}
-\end{equation}
-
-\begin{equation}
-  \begin{Bmatrix}
+  \beamcomps{\ghat}=\begin{Bmatrix}
     \cos\eta \cos\theta \\
     \sin\eta \cos\theta \\
     \sin\theta
   \end{Bmatrix}
+\end{equation}
+The change of basis matrix taking components in \beamframe\ to \labframe\ is defined as
+\begin{equation}
+  \mathsf{r}_b = \left[ \ehat,\; -\bhat\times\ehat,\; -\bhat \right].
+  \label{E:etaFrame}
 \end{equation}
 
 \subsection{Detector Frame}\label{S:detector}
@@ -425,7 +433,7 @@ Given the reciprocal lattice vector \gvec, with components $\rcpcomps{\gvec}=[h\
                  &= \rmats \samcomps{\defgrad^{-T}} \bmat \rcpcomps{\gvec} \nonumber\\
         \Aboxed{ &= \rmats \samcomps{\vmat^{-1}} \rmatc \bmat \rcpcomps{\gvec} }\label{E:gvecLab},
 \end{align}
-The three crystal orientation degrees of freemdom are wrapped up in \rmatc, while the six that represent strain are contained in \vmat.  
+The three crystal orientation degrees of freedom are wrapped up in \rmatc, while the six that represent strain are contained in \vmat.  
 
 Functionally, the orientation degrees of freedom can be decoupled from the strain (and position) degrees of freedom in the initial analysis.  This ``orientation indexing'' procedure essentially consists of testing discrete orientations $\mathsf{R}(\phi, \mbm{n})$, for a set of feasible \gvec\ and checking for intensity at the associated detector points \Pfour.  For the rotation method, the oscillation angle $\omega$ must be calculated for each feasible \gvec\ as well; this will be discussed in \secref{S:oscill}.
 
@@ -525,3 +533,4 @@ The complete procedure for finding the detector coordinates of all reflections f
 
 \end{document}
 
+\
