beam frame section

--- a/main.tex
+++ b/main.tex
@@ -26,7 +26,7 @@
 
 % Front matter
 \author{Joel Vincent Bernier}
-\title{A general geometric model for casting diffraction}
+\title{A general geometric model for parameterizing diffraction measurements}
 
 % some macros
 \newcommand{\mbm}[1]{\ensuremath{\mbox{\boldmath$#1$}}}
@@ -210,13 +210,8 @@
 \begin{document}
 \maketitle
 \begin{abstract}
-A complete and general geometric model for describing diffraction
-measurements is presented.  It includes provisions for describing both
-mono- and poly-chromatic schemas for {\em collimated} incident beams
-(\ie\ negligable beam divergence).  Detectors are modeled as planar
-bodies, and their shapes and placements in the reference frame are
-completely arbitrary.  The mapping that takes an admissable reciprocal
-lattice vector in the crystal frame to pixel coordinates in a given
+A complete and general geometric model for parameterizing diffraction
+measurements with one or more planar detectors is presented.  It includes provisions for describing both mono- and poly-chromatic schemas for {\em collimated} incident beams (\ie\ negligable beam divergence).  Detectors are modeled as polygonal planar bodies, and their shapes and placements in the reference frame are completely arbitrary.  The mapping that takes an admissable reciprocal lattice vector in the crystal frame to pixel coordinates in a given
 detector frame is of the form $\mathbf{A}(\mathbf{x})\cdot\mathbf{x} =
 \mathbf{y}$.  The application of focus in this note is the rotation
 method; this implies a monochromatic incident beam and a sample frame
