--- a/main.tex
+++ b/main.tex
@@ -68,6 +68,11 @@
 \newcommand{\Zl}{\ensuremath{\hat{\mbm{\mathrm{Z}}}_l}}
 \newcommand{\labframe}{\ensuremath{\left\{\Xl\Yl\Zl\right\}}}
 
+\newcommand{\Xb}{\ensuremath{\hat{\mbm{\mathrm{X}}}_b}}
+\newcommand{\Yb}{\ensuremath{\hat{\mbm{\mathrm{Y}}}_b}}
+\newcommand{\Zb}{\ensuremath{\hat{\mbm{\mathrm{Z}}}_b}}
+\newcommand{\beamframe}{\ensuremath{\left\{\Xb\Yb\Zb\right\}}}
+
 \newcommand{\Xd}{\ensuremath{\hat{\mbm{\mathrm{X}}}_d}}
 \newcommand{\Yd}{\ensuremath{\hat{\mbm{\mathrm{Y}}}_d}}
 \newcommand{\Zd}{\ensuremath{\hat{\mbm{\mathrm{Z}}}_d}}
@@ -76,18 +81,18 @@
 \newcommand{\Xs}{\ensuremath{\hat{\mbm{\mathrm{X}}}_s}}
 \newcommand{\Ys}{\ensuremath{\hat{\mbm{\mathrm{Y}}}_s}}
 \newcommand{\Zs}{\ensuremath{\hat{\mbm{\mathrm{Z}}}_s}}
-\newcommand{\samframe}{\ensuremath{\left\{\Xs\Ys\Zs\right\}}}
+\newcommand{\sampframe}{\ensuremath{\left\{\Xs\Ys\Zs\right\}}}
 
 \newcommand{\Xc}{\ensuremath{\hat{\mbm{\mathrm{X}}}_c}}
 \newcommand{\Yc}{\ensuremath{\hat{\mbm{\mathrm{Y}}}_c}}
 \newcommand{\Zc}{\ensuremath{\hat{\mbm{\mathrm{Z}}}_c}}
-\newcommand{\xtlframe}{\ensuremath{\left\{\Xc\Yc\Zc\right\}}}
+\newcommand{\crysframe}{\ensuremath{\left\{\Xc\Yc\Zc\right\}}}
 
 % vector components
 \newcommand{\labcomps}[1]{\left[#1\right]_l}
 \newcommand{\detcomps}[1]{\left[#1\right]_d}
-\newcommand{\samcomps}[1]{\left[#1\right]_s}
-\newcommand{\xtlcomps}[1]{\left[#1\right]_c}
+\newcommand{\sampcomps}[1]{\left[#1\right]_s}
+\newcommand{\cryscomps}[1]{\left[#1\right]_c}
 \newcommand{\rcpcomps}[1]{\left[#1\right]_*}
 
 % cross-references
@@ -222,13 +227,14 @@ incident beam, with provision for finite deviations.
 \section{Coordinate Systems}
 
 A single-detector diffraction measurement schema is illustrated in
-\figref{F:diffraction_schema}.  For genearlity we utilize four
+\figref{F:diffraction_schema}.  For generality we utilize four
 fundamental coordinate systems:
 \begin{itemize}
   \item the {\bf laboratory} frame, \labframe;
+  \item the {\bf beam} frame, \beamframe;
   \item the {\bf detector} frame(s), $\detframe_i$;
-  \item the {\bf sample} frame, \samframe; and
-  \item the {\bf crystal} frame, \xtlframe.
+  \item the {\bf sample} frame, \sampframe; and
+  \item the {\bf crystal} frame, \crysframe.
 \end{itemize}
 
 \subsection{Laboratory Frame}\label{S:laboratory}
@@ -239,7 +245,7 @@ rectangular or circular cross-section.  The beam direction is
 represented by the unit vector \bhat, and the centroid of its
 cross-section is defined to coincide with the origin of \labframe,
 labeled \Pzero.
-\subsubsection{The Beam Frame}
+\subsection{The Beam Frame}
 When working with diffraction geometry, it becomes very useful to associate detector-relative cartesian coordinates with a bragg angle, $2\theta$, and azimuth, $\eta$.  In the present notation, the bragg angle (see \eqnref{E:braggCondition}) is defined as
 \begin{equation}
   2\theta \equiv \arccos{\left( \bhat \cdot \dhat \right)}
@@ -248,25 +254,25 @@ where \dhat\ is the unit vector along the diffracted beam
 \begin{displaymath}
   \dhat \equiv \frac{\Pfour-\Pthree}{\|\Pfour-\Pthree\|}
 \end{displaymath}
-(see \secref{S:detector}, \ref{S:crystal})
-\begin{equation}
-  \eta = \arccos{\left(\ehat \cdot \left( \eye - \bhat \otimes \bhat \right)\cdot\dhat\right)}
-\end{equation}
-
-The definition of a reference azimuth is arbitrary
+(see \secref{S:detector}, \ref{S:crystal}).  For the sake of convenience, the beam fram is defined such that $-\bhat \| \Zb$.  To define an azimuthal angle, $\eta$, an axis normal to the beam direction must be specified to define $\eta=0$.  This axis is represented by the unit vector \ehat.  The basis vectors defining \beamframe\ are therefore 
 \begin{equation}
   \left[ \ehat,\; -\bhat\times\ehat,\; -\bhat \right]
   \label{E:etaFrame}
 \end{equation}
-
+and the azimuth of a diffracted beam is obtained as
 \begin{equation}
-  \begin{Bmatrix}
+  \eta = \arccos{\left(\ehat \cdot \left( \eye - \bhat \otimes \bhat \right)\cdot\dhat\right)}.
+\end{equation}
+In the beam frame, the expression for a reciprocal lattice vector, \gvec, is simply
+\begin{equation}
+  \gvec = \frac{2\sin{\theta}}{\lambda}\begin{Bmatrix}
     \cos\eta \cos\theta \\
     \sin\eta \cos\theta \\
     \sin\theta
   \end{Bmatrix}
 \end{equation}
-
+where $\lambda$ is the \xray\ wavelength.
+ 
 \subsection{Detector Frame}\label{S:detector}
 A typical detector element has a planar active area with a rectangular
 shape.  A complete instrument may contain several independent
@@ -291,10 +297,10 @@ $\detcomps{\detpt}=[x\; y\; 0]$.
 \subsection{Sample Frame}\label{S:sample}
 The sample frame provides a basis in which to represent a uniquely
 oriented and located specimen.  For the arbitrarily defined
-sample-relative vector $\mathbf{S}$, coordinates in \samframe\ are
+sample-relative vector $\mathbf{S}$, coordinates in \sampframe\ are
 connected to \labframe\ via the affine transformation
 \begin{equation}
-  \labcomps{\mathbf{s}} = \rmats\cdot\samcomps{\mathbf{s}} + \labcomps{\tvecs}  
+  \labcomps{\mathbf{s}} = \rmats\cdot\sampcomps{\mathbf{s}} + \labcomps{\tvecs}  
 \end{equation}
 where $\tvecs=\Ptwo-\Pzero$.  In the case of the rotation method, this
 is frame is the oscillation frame.  Without loss of generality, the
@@ -306,17 +312,17 @@ oscillation axis is fixed to \Ys.  It may be canted with respect to
   via calibration.}.  The oscillation angle itself is represented by
 $\omega$.  The full model has a sufficient number of degrees of
 freedom to preclude the need for a third rotational degree of freedom
-for \samframe.
+for \sampframe.
 
 \subsection{Crystal Frame}\label{S:crystal}
 The crystal frame represent a local RHON coordinate system attached to
 the lattice of a single-crystal domain in the sample.  In the context
-of far-field HEDM, the origin of \xtlframe, labeled \Pthree,
+of far-field HEDM, the origin of \crysframe, labeled \Pthree,
 represents the centroid of the crystallite.  For a crystal-relative
 vector $\mathbf{c}$, the components are transformed as
 \begin{align}
-  \samcomps{\mathbf{c}} &= \rmatc\cdot\xtlcomps{\mathbf{c}} + \samcomps{\tvecc}\\
-  \labcomps{\mathbf{c}} &= \rmats\cdot\rmatc\cdot\xtlcomps{\mathbf{c}} + \rmats\cdot\samcomps{\tvecc} + \labcomps{\tvecs}
+  \sampcomps{\mathbf{c}} &= \rmatc\cdot\cryscomps{\mathbf{c}} + \sampcomps{\tvecc}\\
+  \labcomps{\mathbf{c}} &= \rmats\cdot\rmatc\cdot\cryscomps{\mathbf{c}} + \rmats\cdot\sampcomps{\tvecc} + \labcomps{\tvecs}
 \end{align}
 where $\tvecc=\Pthree-\Ptwo$.  The forumaltion of diffracted beam vectors for a given unit cell is discussed in \secref{S:diffraction}.
 %%
@@ -347,7 +353,7 @@ following conditions:
   \end{array} \label{E:lattParams}
 \end{equation}
 %% 
-The six scalar cell parameters \cellParams\ represent a convenient parameterization of the reference unit cell, which typically correspond to an unloaded state at a reference temperature. Crystal symmetry operations (excluding triclinic) generate equivalences among cell parameters; however once a crystal is deformed, the reference symmetry is broken and all six parameters must be considered as independent.  The treatment of strained crystals in the context of the reference crystal symmetry is discussed in detail below.  For writing components of crystal-relative vectors and tensors in \xtlframe, 
+The six scalar cell parameters \cellParams\ represent a convenient parameterization of the reference unit cell, which typically correspond to an unloaded state at a reference temperature. Crystal symmetry operations (excluding triclinic) generate equivalences among cell parameters; however once a crystal is deformed, the reference symmetry is broken and all six parameters must be considered as independent.  The treatment of strained crystals in the context of the reference crystal symmetry is discussed in detail below.  For writing components of crystal-relative vectors and tensors in \crysframe, 
 a convention must be chosen to register the lattice vectors.  The
 convention employed herein is consistent with that proposed by
 \cite{Nye:crysBookAppB}.  Explicitly stated, $\cella\parallel\Xc$ and
@@ -370,7 +376,7 @@ cell.  The change-of-basis matrix, \bmat, that takes vector components in the
 reciprocal lattice frame to the crystal frame is formulated as
 %%
 \begin{align}
-  \bmat &= \xtlcomps{\begin{matrix} \rcella & \rcellb & \rcellc \end{matrix}} \label{E:bmatrix}\\ 
+  \bmat &= \cryscomps{\begin{matrix} \rcella & \rcellb & \rcellc \end{matrix}} \label{E:bmatrix}\\ 
         &= \frac{1}{\cellVol}\begin{bmatrix}
            bc\sin{\ralfa}\sin{\dbeta}\sin{\dgama} &                          0 &                                           0 \\
           -bc\sin{\ralfa}\sin{\dbeta}\cos{\dgama} & ac\sin{\ralfa}\sin{\dbeta} &                                           0 \\
@@ -389,8 +395,8 @@ analogously to the direct lattice parameters in \figref{F:lattice} and
     reference (read: unstrained) lattice has $\cella\parallel\Xc$ and
     $\rcellc\parallel\Zc$. Note that a triclinic
     primitive cell is depicted for generality.  The crystal orientation, \rmatc,
-    takes components in the crystal frame, \xtlframe, to the sample
-    frame, \samframe.}
+    takes components in the crystal frame, \crysframe, to the sample
+    frame, \sampframe.}
   \label{F:lattice}
 \end{figure}
 %%
@@ -406,19 +412,19 @@ Assume that a reciprocal lattice vector, \gvec, satisfies a bragg condition.  Th
 $\ghat=\gvec / \|\gvec\|$, and \bhat\ is the unit vector aligned with the beam propagation direction.  \eqnref{E:braggCondition} is the bragg condition for \xrays\ having wavelength $\lambda$, and \eqnref{E:intersectsDetector} is the geometric condition ensuring that \dhat\ can intersect the detector plane.  Note that there is an additional condition that must be satisfied in the instrument for \Pfour\ to be observable; it must also lie within the physical extent of the detector element.  Application of this condition is, however, quite straightforward and not explicitly stated in this document.
 
 \subsection{Representing crystal orientation and strain}
-A reciprocal lattice vector, \gvec, is typically representend by its components in the reference (read: undistorted) reciprocal lattice frame, $\rcpcomps{\gvec}=[h\; k\; l]$.  The change-of-basis matrix, \bmat, that takes components in the reciprocal lattice to \xtlframe\ was given by \eqnref{E:bmatrix} above (\secref{S:conventions}).  The effects of both finite distortion and rotation of a crystal lattice with respect to \samframe\ are captured using a deformation gradient tensor, \defgrad, as presented in \cite{Bernier:2011uq}.  The tensor \defgrad\ acts on the {\em direct} lattice vectors, and takes undistorted lattice vectors in the reference crystal frame, \xtlframe, to reoriented and distorted lattice vectors in the sample frame, \samframe.  Using the polar decomposition, 
+A reciprocal lattice vector, \gvec, is typically representend by its components in the reference (read: undistorted) reciprocal lattice frame, $\rcpcomps{\gvec}=[h\; k\; l]$.  The change-of-basis matrix, \bmat, that takes components in the reciprocal lattice to \crysframe\ was given by \eqnref{E:bmatrix} above (\secref{S:conventions}).  The effects of both finite distortion and rotation of a crystal lattice with respect to \sampframe\ are captured using a deformation gradient tensor, \defgrad, as presented in \cite{Bernier:2011uq}.  The tensor \defgrad\ acts on the {\em direct} lattice vectors, and takes undistorted lattice vectors in the reference crystal frame, \crysframe, to reoriented and distorted lattice vectors in the sample frame, \sampframe.  Using the polar decomposition, 
 \begin{equation}
     \defgrad = \vmat \rmatc,\; \forall\; \vmat \in Sym^{3\times3},\; \rmatc \in SO^3,
 \end{equation}
 where \rmatc\ is the crystal orientation and \vmat\ is the ``left'' stretch tensor.  \citet{Edmiston2012} have shown that 
 $\defgrad^{-T}=\vmat^{-1}\rmatc$ 
-can be applied analogously to reciprocal lattice vector components written in \xtlframe.
+can be applied analogously to reciprocal lattice vector components written in \crysframe.
 Given the reciprocal lattice vector \gvec, with components $\rcpcomps{\gvec}=[h\; k\; l]$ in the reciprocal lattice frame, the fully distorted and orientend components in \labframe\ are then derived as
 \begin{align}
-\labcomps{\gvec} &= \rmats \samcomps{\gvec} \nonumber\\
-                 &= \rmats \samcomps{\defgrad^{-T}} \xtlcomps{\gvec} \nonumber\\
-                 &= \rmats \samcomps{\defgrad^{-T}} \bmat \rcpcomps{\gvec} \nonumber\\
-        \Aboxed{ &= \rmats \samcomps{\vmat^{-1}} \rmatc \bmat \rcpcomps{\gvec} }\label{E:gvecLab},
+\labcomps{\gvec} &= \rmats \sampcomps{\gvec} \nonumber\\
+                 &= \rmats \sampcomps{\defgrad^{-T}} \cryscomps{\gvec} \nonumber\\
+                 &= \rmats \sampcomps{\defgrad^{-T}} \bmat \rcpcomps{\gvec} \nonumber\\
+        \Aboxed{ &= \rmats \sampcomps{\vmat^{-1}} \rmatc \bmat \rcpcomps{\gvec} }\label{E:gvecLab},
 \end{align}
 The three crystal orientation degrees of freemdom are wrapped up in \rmatc, while the six that represent strain are contained in \vmat.  
 
@@ -430,7 +436,7 @@ The coordinates of the points $\Pzero-\Pfour$ (see \figref{F:diffraction_schema}
   \labcomps{\Pzero}  &\equiv \begin{bmatrix} 0 & 0 & 0 \end{bmatrix} \\
   \labcomps{\Pone}   &= \labcomps{\tvecd} \\
   \labcomps{\Ptwo}   &= \labcomps{\tvecs} \\
-  \labcomps{\Pthree} &= \rmats\samcomps{\tvecc} + \labcomps{\tvecs} \\
+  \labcomps{\Pthree} &= \rmats\sampcomps{\tvecc} + \labcomps{\tvecs} \\
   \labcomps{\Pfour}  &= \rmatd\detcomps{\detpt} + \labcomps{\tvecd}
 \end{align}
 Using the parametric equations for a plane (\eqnref{E:plane}) and line (\eqnref{E:line}), we may obtain a system of equations linking \dhat\ and \Pfour.
@@ -477,9 +483,9 @@ For a monochromatic schema using the rotation method, the action of the oscillat
 \end{align}
 From \eqnref{E:gvecLab} we have
 \begin{equation}
-    \samcomps{\gvec} = \samcomps{\defgrad^{-T}}\bmat\rcpcomps{\gvec} \label{E:ghatInSamp}
+    \sampcomps{\gvec} = \sampcomps{\defgrad^{-T}}\bmat\rcpcomps{\gvec} \label{E:ghatInSamp}
 \end{equation}
-By writing the bragg condition (\eqnref{E:braggCondition}) in terms of lab-frame components by multiplying by the normalized components $\samcomps{\ghat}$ above by \rmats\ leads to relation of the form 
+By writing the bragg condition (\eqnref{E:braggCondition}) in terms of lab-frame components by multiplying by the normalized components $\sampcomps{\ghat}$ above by \rmats\ leads to relation of the form 
 \begin{align}
     a \siw + b \cow &= c \label{E:trig}\\
                     &\equiv R\sin{\left(x+\alpha\right)} \label{E:identity}\\
@@ -488,9 +494,9 @@ By writing the bragg condition (\eqnref{E:braggCondition}) in terms of lab-frame
 and 
 %%
 \begin{align}
-    a = \samcomps{\hgT}\labcomps{\hbZ} &+ \six\samcomps{\hgZ}\labcomps{\hbO} - \cox\samcomps{\hgZ}\labcomps{\hbT}\\
-    b = \samcomps{\hgZ}\labcomps{\hbZ} &- \six\samcomps{\hgT}\labcomps{\hbO} + \cox\samcomps{\hgT}\labcomps{\hbT}\\
-    c =                  -\sin{\theta} &- \cox\samcomps{\hgO}\labcomps{\hbO} - \six\samcomps{\hgO}\labcomps{\hbT}
+    a = \sampcomps{\hgT}\labcomps{\hbZ} &+ \six\sampcomps{\hgZ}\labcomps{\hbO} - \cox\sampcomps{\hgZ}\labcomps{\hbT}\\
+    b = \sampcomps{\hgZ}\labcomps{\hbZ} &- \six\sampcomps{\hgT}\labcomps{\hbO} + \cox\sampcomps{\hgT}\labcomps{\hbT}\\
+    c =                  -\sin{\theta} &- \cox\sampcomps{\hgO}\labcomps{\hbO} - \six\sampcomps{\hgO}\labcomps{\hbT}
 \end{align}
 %%
 These yield the solutions
@@ -508,7 +514,7 @@ which are either unique (both sides of the diffraction cone), a double root (tan
 The complete procedure for finding the detector coordinates of all reflections for a specifically oriented, strained crystal at the the position \Pthree\ consists of the following procedure:
 \begin{enumerate}
 \item Generate $[h\; k\; l]$ up to the relevant order (determined by geometry and wavelength of the \xrays) \\
-\item Calculate the set of reciprocal lattice vector components in \samframe\ using \eqnref{E:ghatInSamp} \\
+\item Calculate the set of reciprocal lattice vector components in \sampframe\ using \eqnref{E:ghatInSamp} \\
 \item Calculate the set of oscillation angles, $(\omega_0,\; \omega_1)$, for each unique $[h\; k\; l]$ using \eqnref{E:omegas}\\
 \item Calculate the set of unit diffraction vector components in \labframe\ using \eqnref{E:rmats}, \eqnref{E:gvecLab}, \eqnref{E:dhat} for each valid oscillation angle pair in $(\omega_0,\; \omega_1)$\\
 \item Calculate $\detcomps{\Pfour}$ from \eqnref{E:Pfour}.
